feat: implement chat service

--- a/build.gradle
+++ b/build.gradle
@@ -35,14 +35,26 @@ protobuf {
     }
 }
 
-// Define a Gradle task for GreetingServer
-tasks.register('runServer', JavaExec) {
-    main = 'com.grpc.chatroom.GreetingServer'
+tasks.register('runGreetingServer', JavaExec) {
+    main = 'com.grpc.greeting.GreetingServer'
     classpath = sourceSets.main.runtimeClasspath
 }
 
-// Define a Gradle task for GreetingClient
-tasks.register('runClient', JavaExec) {
-    main = 'com.grpc.chatroom.GreetingClient'
+tasks.register('runGreetingClient', JavaExec) {
+    main = 'com.grpc.greeting.GreetingClient'
     classpath = sourceSets.main.runtimeClasspath
 }
+
+tasks.register('runChatServer', JavaExec) {
+    main = 'com.grpc.chatroom.ChatRoomServer'
+    classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
+}
+
+tasks.register('runChatClient', JavaExec) {
+    main = 'com.grpc.chatroom.ChatRoomClient'
+    classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
+}
+
+
